Fix note.css so that the note list layout wouldn't collapse

--- a/app/assets/stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/notes.css.scss
@@ -5,6 +5,8 @@
 /* 投稿一覧 ================================ */
 .notes {
   margin: 0;
+  float: left;
+  width: 60%;
 }
 
 .notes li {
